--- a/src/main/webapp/resources/css/homeMain.css
+++ b/src/main/webapp/resources/css/homeMain.css
@@ -109,12 +109,9 @@
 				margin: 35px 5px 35px 5px;
 			    width: 120px;
 			    height: 120px;
-			    border: 3px solid red;
-			}   
-			.memInfo{
-				사원명 사원정보
-			}
-			 
+			    border: 3px solid #c9c4c4 important;
+			}  
+	
             /*테이블*/
 
             h1{margin-bottom: 20px;}
