--- a/src/main/webapp/resources/css/comebackSlide2.css
+++ b/src/main/webapp/resources/css/comebackSlide2.css
@@ -3,9 +3,9 @@
 	.section .slidewrap {max-width:1200px;margin:0 auto;}
 	.section .slidelist {white-space:nowrap;font-size:0;overflow:hidden;position:relative;}
 	.section .slidelist > li {display:inline-block;vertical-align:middle;width:100%;transition:all .5s;}
-	.section .slidelist > li > a {display:block;position:relative;}
-	.section .slidelist > li > a img {width:100%;}
-	.section .slidelist label {position:absolute;z-index:10;top:50%;transform:translateY(-50%);padding:50px;cursor:pointer;}
+	.section .slidelist > li > a {display:block;position:relative; height:300px;}
+	.section .slidelist > li > a img {width:100%; height:100%;}
+	.section .slidelist label {position:absolute;z-index:10;top:50%;transform:translateY(-50%);padding:15px;cursor:pointer;}
 	.section .slidelist .textbox {position:absolute;z-index:1;top:50%;left:50%;transform:translate(-50%,-50%);line-height:1.6;text-align:center;}
 	.section .slidelist .textbox h3 {font-size:36px;color:#fff;;transform:translateY(30px);transition:all .5s;}
 	.section .slidelist .textbox p {font-size:16px;color:#fff;opacity:0;transform:translateY(30px);transition:all .5s;}
@@ -25,8 +25,8 @@
 
 	/* 좌,우 슬라이드 버튼 */
 	.slide-control > div {display:none;}
-	.section .left {left:30px;background:url('./img/left.png') center center / 100% no-repeat;}
-	.section .right {right:30px;background:url('./img/right.png') center center / 100% no-repeat;}
+	.section .left {left:30px;background:url('images/left.png') center center / 100% no-repeat;}
+	.section .right {right:30px;background:url('images/right.png') center center / 100% no-repeat;}
 	.section input[id="slide01"]:checked ~ .slidewrap .slide-control > div:nth-child(1) {display:block;}
 	.section input[id="slide02"]:checked ~ .slidewrap .slide-control > div:nth-child(2) {display:block;}
 	.section input[id="slide03"]:checked ~ .slidewrap .slide-control > div:nth-child(3) {display:block;}
@@ -38,3 +38,8 @@
 	.section input[id="slide01"]:checked ~ .slidewrap .slide-pagelist > li:nth-child(1) > label {background:#999;}
 	.section input[id="slide02"]:checked ~ .slidewrap .slide-pagelist > li:nth-child(2) > label {background:#999;}
 	.section input[id="slide03"]:checked ~ .slidewrap .slide-pagelist > li:nth-child(3) > label {background:#999;}
+	
+	/*ol ul 기본 패딩값 수정*/
+	ol, ul {
+    padding-left: 0rem !important;
+}
